--- a/backend/server/requirements.txt
+++ b/backend/server/requirements.txt
@@ -14,23 +14,64 @@ isort==5.7.0
 lazy-object-proxy==1.5.2
 mccabe==0.6.1
 nodeenv==1.5.0
-packaging==20.9
 pluggy==0.13.1
 pre-commit==2.10.1
 py==1.10.0
 pydantic==1.8
 pylint==2.7.2
-pyparsing==2.4.7
 pytest==6.2.2
 python-dotenv==0.15.0
 PyYAML==5.4.1
-six==1.15.0
 starlette==0.13.6
 toml==0.10.2
-typing-extensions==3.7.4.3
 uvicorn==0.13.4
 uvloop==0.15.2
 virtualenv==20.4.2
 watchgod==0.7
 websockets==8.1
-wrapt==1.12.1
+absl-py==1.2.0
+astunparse==1.6.3
+cachetools==5.2.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+flatbuffers==22.9.24
+gast==0.4.0
+google-auth==2.12.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.49.1
+h5py==3.7.0
+idna==3.4
+importlib-metadata==5.0.0
+keras==2.10.0
+Keras-Preprocessing==1.1.2
+libclang==14.0.6
+Markdown==3.4.1
+MarkupSafe==2.1.1
+numpy==1.23.3
+oauthlib==3.2.1
+opt-einsum==3.3.0
+packaging==21.3
+protobuf==3.19.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.9
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
+six==1.16.0
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-hub==0.12.0
+tensorflow-io==0.27.0
+tensorflow-io-gcs-filesystem==0.27.0
+termcolor==2.0.1
+typing-extensions==4.3.0
+urllib3==1.26.12
+Werkzeug==2.2.2
+wrapt==1.12
+zipp==3.8.1
+python-multipart==0.0.5
